--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,21 @@
 <lx-tabs>
 	<lx-tab heading="Posts">
+		<!--la clase 'p+'' de da un padding al elemento-->
 		<div class="p+">
-			Hola mundo
+			<div class="car" ng-repeat="post in posts">
+				<div class="p+">
+					<!--fs-headline convierte al elemento en un encabezado-->
+					<strong class="fs-headline display-block tc-red-900">
+						{{post.title}}
+					</strong>
+					<div class="paragraph fs-body-1 mt+">
+						{{post.body}}
+					</div>
+				</div>
+				<div class="card_actions">
+					<a href="#">Leer más</a>
+				</div>
+			</div>
 		</div>
 	</lx-tab>
 	<lx-tab heading="Users">
