--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 	<lx-tab heading="Posts">
 		<!--la clase 'p+'' de da un padding al elemento-->
 		<div class="p+">
-			<div class="car" ng-repeat="post in posts">
+			<div class="card top-space" ng-repeat="post in posts">
 				<div class="p+">
 					<!--fs-headline convierte al elemento en un encabezado-->
 					<strong class="fs-headline display-block tc-red-900">
@@ -12,15 +12,32 @@
 						{{post.body}}
 					</div>
 				</div>
-				<div class="card_actions">
+				<div class="card__actions">
 					<a href="#">Leer más</a>
 				</div>
 			</div>
 		</div>
 	</lx-tab>
 	<lx-tab heading="Users">
-		<div class="p+">
-			Hola mundo users
+		<div class="card top-space" ng-repeat="user in users">
+			<div flex-container="row">
+				<div class="card__img card__img--left" style="height: 160px;">
+					<img src="imgs/user.jpg" alt="">
+				</div>
+				<div flex-item flex-container="column">
+					<div flex-item>
+						<strong class="fs-headline display-block tc-red-900">
+							{{user.name}}
+						</strong>
+						<strong class="fs-subhead tc-black-2 display-block">
+							{{user.email}}
+						</strong>
+					</div>
+					<div class="card__actions">
+						<a href="#">Ver usuario</a>
+					</div>
+				</div>
+			</div>
 		</div>
 	</lx-tab>
 </lx-tabs>
